--- a/backend/backend/Dockerfile
+++ b/backend/backend/Dockerfile
@@ -18,4 +18,4 @@ COPY / /app
 WORKDIR /app
 
 # Выполнить запуск сервера разработки при старте контейнера.
-CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
+CMD ["python3", "manage.py", "runserver", "0:8000"]
