--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+    depends_on:
+      - web
   web:
     ports:
       - "8000:8000"
@@ -28,6 +30,8 @@ services:
       - ../backend/backend/.env
   database:
     image: postgres:14.6-alpine
+    volumes:
+      - /var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=123
