изменение для проверки

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -21,25 +21,26 @@ services:
     ports:
       - "8000:8000"
     restart: always
-    build:
-      context: ../backend/backend
-      dockerfile: Dockerfile
+    volumes:
+      - ../backend/backend/media:/app/media
+      - ../backend/backend/static:/app/static
     depends_on:
       - "database"
     env_file:
       - ../backend/backend/.env
-    volumes:
-      - ./media:/app/media
-      - ./static:/app/static
+    build:
+      context: ../backend/backend
+      dockerfile: Dockerfile
   database:
     image: postgres:14.6-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=123
       - POSTGRES_DB=GroceryDB
     ports:
       - 5432:5432
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
+
 volumes:
   postgres_data:
