--- a/backend/backend/.env
+++ b/backend/backend/.env
@@ -5,3 +5,6 @@ DB_PASSWORD=123
 DB_USER=postgres
 DB_HOST=database
 DB_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=123
+POSTGRES_DB=GroceryDB
