--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,6 +1,5 @@
 version: '3.3'
 services:
-
   frontend:
     build:
       context: ../frontend
@@ -14,33 +13,32 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../backend/backend/static:/var/html/static/django/
+      - ../backend/backend/media:/var/html/media/
     depends_on:
+      - web
+    links:
       - web
   web:
     ports:
-      - "8000:8000"
+      - "8001:8000"
     restart: always
     volumes:
       - ../backend/backend/media:/app/media
       - ../backend/backend/static:/app/static
+      - ../backend/backend/:/app
     depends_on:
       - "database"
     env_file:
       - ../backend/backend/.env
     build:
       context: ../backend/backend
-      dockerfile: Dockerfile
   database:
     image: postgres:14.6-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=123
-      - POSTGRES_DB=GroceryDB
-    ports:
-      - 5432:5432
+    env_file:
+      - ../backend/backend/.env
 
 volumes:
   postgres_data:
