--- a/backend/backend/Dockerfile
+++ b/backend/backend/Dockerfile
@@ -18,4 +18,5 @@ COPY / /app
 WORKDIR /app
 
 # Выполнить запуск сервера разработки при старте контейнера.
-CMD ["gunicorn", "backend.wsgi:application", "--bind", "0:8001" ]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# CMD ["gunicorn", "backend.wsgi:application", "--bind", "0:8001" ]
