--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,7 +4,16 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-
+    location /api/ {
+        proxy_pass
+        http://host.docker.internal:8001/api/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For
+        $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto
+        $scheme;
+    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
